package com.booleanuk.core;

public class SavingsAccount extends Account {

    public SavingsAccount(String identifier) {
        super(identifier);
    }

}
