package com.booleanuk.core;

public enum TransactionType {
    DEPOSIT, WITHDRAWAL, TRANSFER
}
